<resources>
    <string name="app_name">Yum Yum</string>

    <!-- Detail Activity-->
    <string name="detail_also_known_as_label">Also known as:</string>
    <string name="detail_place_of_origin_label">Place of origin:</string>
    <string name="detail_description_label">Description:</string>
    <string name="detail_ingredients_label">Ingredients:</string>
    <string name="detail_steps_label">Instructions:</string>
    <string name="title_button">My Recipes</string>

    <string name="main_page_title">Random Picks</string>

    <!-- Content descriptions-->
    <string name="food_picture_content_description">Food picture</string>

    <!-- Error messages-->
    <string name="detail_error_message">Foood data not available</string>
    <string name="random_picks">Random Picks</string>
    <string name="my_recipes">My Recipes</string>
    <string name="add">Add</string>
    <string name="add_your_recipe">Add Your Recipe</string>
    <string name="food_name">Food Name</string>
    <string name="cuisines">Cuisines</string>
    <string name="diets">Diets (e.g. veggie, gluten-free, …)</string>
    <string name="description">Description</string>
    <string name="step">Step</string>
    <string name="ingredient_name">ingredient name</string>
    <string name="measure">measure</string>
    <string name="unit">unit</string>
    <string name="submit">SUBMIT</string>
    <string name="cancel">CANCEL</string>
    <string name="my_favorites">My Favorites</string>


</resources>
