<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">
        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/ingredient_name"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/measure"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/measure"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/unit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/unit"
            android:importantForAutofill="no"
            android:inputType="text" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>